# erp-aero-test-task

./: .gitignore  pyproject.toml
controls/: parser.py
erp_aero_test_task/: pdf_page.py
tests/: test_pdf_task.py
utils/: paths.py
